# toy01_table_stripper

./: .gitignore  LICENSE  README.md  export_table_schema.py  pyproject.toml
toy01_table_stripper/: __init__.py  main.py
