[build-system]
requires = ["uv>=0.1.0"]
build-backend = "uv.build"

[project]
name = "toy01_table_stripper"
version = "0.1.0"
readme = "README.md"
authors = [
    {name = "pathcosmos", email = "lanco.gh@gmail.com"}
]
dependencies = []
requires-python = ">=3.10"

[project.scripts]
toy01-table-stripper = "toy01_table_stripper.main:main"

